# Call-me-Maybe

./: .flake8  .gitignore  Makefile  README.md  __trash__.py  mypy.ini  pyproject.toml
data/: output.json
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  call_me_maybe.py  constrained_decoding.py  main.py  parsing.py
