[project]
name = "call-me-maybe"
version = "0.1.0"
description = "A constrained-decoding engine that parses JSON function definitions and prompts, then executes structured function calling using the 42 LLM SDK."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = ["numpy",
                "pydantic",
                "llm_sdk",
                "flake8",
                "mypy"]

[tool.uv.sources]
llm_sdk = { path = "llm_sdk" }
